--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* line 7, ../sass-twitter-bootstrap-master/css/style.scss */
 body {
-  padding: 60px 0;
+  padding: 0 0 60px 0;
   color: black;
 }
 
