--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* line 34, ../sass-twitter-bootstrap-master/css/style.scss */
 .hero {
-  padding: 160px 0;
+  padding: 80px 0;
   background: white;
 }
 
@@ -42,14 +42,14 @@ h1, h2, h3, h4, h5, h6 {
 .hero > .inner {
   width: 980px;
   margin: 0 auto;
+  text-align: center;
 }
 
-/* line 41, ../sass-twitter-bootstrap-master/css/style.scss */
+/* line 42, ../sass-twitter-bootstrap-master/css/style.scss */
 .hero h1 {
-  margin: 0;
+  margin: 0 0 40px 0;
   font-size: 60px;
   line-height: 1em;
-  text-align: center;
   font-weight: normal;
 }
 
