--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -239,7 +239,7 @@ body {
   font-size: 13px;
   line-height: 20px;
   color: #333333;
-  background-color: #f6f6f6;
+  background-color: white;
 }
 
 /* line 22, ../sass-twitter-bootstrap-master/css/_scaffolding.scss */
@@ -2200,7 +2200,7 @@ table {
 }
 /* line 53, ../sass-twitter-bootstrap-master/css/_tables.scss */
 .table .table {
-  background-color: #f6f6f6;
+  background-color: white;
 }
 
 /* line 65, ../sass-twitter-bootstrap-master/css/_tables.scss */
