--- a/css/style.css
+++ b/css/style.css
@@ -77,24 +77,20 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   color: #333333;
   height: 90%;
-  padding: 2% 10px;
+  padding: 0 10px;
   overflow: hidden;
+  background: #f6f6f6;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
 }
 
-/* line 73, ../sass-twitter-bootstrap-master/css/style.scss */
+/* line 74, ../sass-twitter-bootstrap-master/css/style.scss */
 .pj a:hover {
   text-decoration: none;
-  background: #eeeeee;
+  background: #e9e9e9;
   color: black;
   margin-top: -5px;
-}
-
-/* line 79, ../sass-twitter-bootstrap-master/css/style.scss */
-.pj h2 {
-  margin-top: 0;
 }
 
 /* line 82, ../sass-twitter-bootstrap-master/css/style.scss */
